Removed slider and changed it to a toggle box.

--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "abort-controller": "^3.0.0",
     "cors": "^2.8.5",
+    "dgram": "^1.0.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "jshint": "^2.11.0",
     "n": "^6.5.1",
     "net": "^1.0.2",
-    "node-fetch": "^2.6.0",
-    "node-osc": "^4.1.8",
+    "node-fetch": "^2.6.1",
+    "node-osc": "^4.1.9",
     "nodemo": "^1.0.0",
     "nodemon": "^2.0.4",
     "nvm": "0.0.4",
+    "os": "^0.1.1",
     "osc": "^2.4.0",
     "osc-js": "^2.1.0",
     "port": "^0.8.1",
